# realtime-audio

./: .gitignore  LICENSE  MANIFEST.in  README.md  audio_test.py  drum_machine.py  pyproject.toml  realtime_audio.py  ui_test.py  waveforms.py
demos/: curses_blink_delay.py
src/drummachine/: __main__.py  samples.py  waveforms.py
