[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drummachine"
version = "0.0.2"
authors = [
  { name="Guitar Dan", email="guitardanuk@gmail.com" },
]
description = "A drum machine package for sequencing waveforms using numpy, curses and the sounddevice module."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Environment :: Console :: Curses",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis"
]
keywords = ["music", "audio", "drums"]
dependencies = [
    "numpy",
    "sounddevice",
]

[project.urls]
"Homepage" = "https://github.com/guitardan/realtime-audio"
"Bug Tracker" = "https://github.com/guitardan/realtime-audio/issues"